# uMesh

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  VERIFICATION.md  library.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  esp32_build_issue.yml  feature_request.md  feature_request.yml  security_report.yml  verification_failure.yml
.github/wiki/: Configuration.md  Contributing.md  FAQ.md  Getting-Started.md  Hardware-Support.md  Home.md  Power-Management.md  Routing-Modes.md  Troubleshooting.md
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  DIAGRAMS.md  IMPLEMENTATION.md  KNOWN_ISSUES.md  KNOWN_LIMITATIONS.md  MAC_LAYER.md  NETWORK_LAYER.md  PHYSICAL_LAYER.md  POWER_MANAGEMENT.md  README.md  SECURITY_LAYER.md
examples/coordinator/: main.c
examples/deep_sleep_sensor/: sensor_node_deepsleep.c
examples/end_node/: main.c
examples/gradient_sensor/: coordinator.c  sensor_node.c
examples/target_info/: main.c
include/: umesh.h  umesh_caps.h
port/esp32/: CMakeLists.txt  phy_esp32.c  power_esp32.c  twt_esp32c6.c  twt_esp32c6.h
port/esp32/smoke/: CMakeLists.txt
port/esp32/smoke/main/: CMakeLists.txt  main.c
port/posix/: phy_posix.c  phy_posix.h  power_posix.c
prompts/: 80_docs_version_release_safety.md
releases/v1.0.0/: RELEASE_NOTES.md  SHA256SUMS.txt
releases/v1.1.0/: RELEASE_NOTES.md  SHA256SUMS.txt
releases/v1.2.0/: RELEASE_NOTES.md  SHA256SUMS.txt
releases/v1.3.0/: RELEASE_NOTES.md  SHA256SUMS.txt
releases/v1.4.0/: RELEASE_NOTES.md  SHA256SUMS.txt
src/: context.c  context.h  umesh.c  umesh.h
src/common/: crc.c  crc.h  defs.h  ring.c  ring.h
src/mac/: cca.c  cca.h  frame.c  frame.h  mac.c  mac.h
src/net/: discovery.c  discovery.h  net.c  net.h  routing.c  routing.h
src/phy/: phy.c  phy.h  phy_hal.h
src/power/: power.c  power.h  power_hal.h
src/sec/: keys.c  keys.h  sec.c  sec.h
tests/: CMakeLists.txt  test_caps.c  test_corpus_smoke.c  test_crc.c  test_e2e.c  test_election.c  test_forwarding.c  test_frame.c  test_gradient.c  test_mac.c  test_net.c  test_posix_loopback.c  test_power.c  test_ring.c  test_routing.c  test_sec.c
tests/hardware/: README.md  dashboard.py
tests/hardware/firmware/auto_mesh_node/: auto_mesh_node.ino
tests/hardware/firmware/coordinator/: _u_crc.c  _u_keys.c  _u_phy.c  _u_phy_esp32.c  _u_umesh.c  coordinator.ino  umesh_src.c
tests/hardware/firmware/end_node/: _u_cca.c  _u_discovery.c  _u_net.c  _u_sec.c  end_node.ino
tests/hardware/firmware/router/: _u_frame.c  _u_mac.c  _u_ring.c  _u_routing.c  router.ino
tests/hardware/runner/: device.py  reporter.py  requirements.txt  test_runner.py
tools/: check_release_readiness.ps1
